# 6-ModelListProperty

./: README.adoc
ModelListProperty/: CMakeLists.txt
ModelListProperty/main/: CMakeLists.txt
ModelListProperty/main/inc/: datasource.hpp  person.hpp  personmodel.hpp
ModelListProperty/main/qml/: InputDialog.qml  Main.qml
ModelListProperty/main/src/: datasource.cpp  main.cpp  person.cpp  personmodel.cpp
